Fix main page offset alignment on tablet and desktop view

--- a/src/components/PageMain/PageMain.scss
+++ b/src/components/PageMain/PageMain.scss
@@ -18,7 +18,7 @@
         border-radius: 3px;
 
         @include tablet {
-            margin: -6.5rem 2rem 1rem;
+            margin: -5.9rem 2rem 1rem;
         }
 
         @include desktop {
